{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 699,
  "lineage": "0f8291e6-1480-5050-9b39-4c8eb5dbe7c1",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_dvwa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:loadbalancer/app/loadbalancer-dvwa/6715678cd6ca5c15",
            "arn_suffix": "app/loadbalancer-dvwa/6715678cd6ca5c15",
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadbalancer-dvwa-207829137.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:loadbalancer/app/loadbalancer-dvwa/6715678cd6ca5c15",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalancer-dvwa",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0916efb992077a75f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a1342b9d7b7bc53"
              },
              {
                "subnet_id": "subnet-0edf0f9d5272ffddd"
              }
            ],
            "subnets": [
              "subnet-02a1342b9d7b7bc53",
              "subnet-0edf0f9d5272ffddd"
            ],
            "vpc_id": "vpc-0944ae33209458e3b",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.project_dvwa_subnet_1",
            "module.network.aws_subnet.project_dvwa_subnet_2",
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:listener/app/loadbalancer-dvwa/6715678cd6ca5c15/17e112ecf0903cf9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:targetgroup/dvwatg/1a6f23034f968d66",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:listener/app/loadbalancer-dvwa/6715678cd6ca5c15/17e112ecf0903cf9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:loadbalancer/app/loadbalancer-dvwa/6715678cd6ca5c15",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.lb_dvwa",
            "module.loadbalancer.aws_lb_target_group.lb_target_group",
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.project_dvwa_subnet_1",
            "module.network.aws_subnet.project_dvwa_subnet_2",
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:targetgroup/dvwatg/1a6f23034f968d66",
            "arn_suffix": "targetgroup/dvwatg/1a6f23034f968d66",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:targetgroup/dvwatg/1a6f23034f968d66",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dvwatg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0944ae33209458e3b"
          },
          "dependencies": [
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attach_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:targetgroup/dvwatg/1a6f23034f968d66-20230209151222865900000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:targetgroup/dvwatg/1a6f23034f968d66",
            "target_id": "i-0740fe210fa8e169f"
          },
          "dependencies": [
            "module.loadbalancer.aws_lb_target_group.lb_target_group",
            "module.network.aws_security_group.instance_sg",
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.project_dvwa_subnet_1",
            "module.network.aws_vpc.project_dvwa_net",
            "module.vm.aws_instance.dvwa_instance_1",
            "module.vm.aws_key_pair.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attach_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:targetgroup/dvwatg/1a6f23034f968d66-20230209151523887900000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:951326256613:targetgroup/dvwatg/1a6f23034f968d66",
            "target_id": "i-02bf3210af9214d2c"
          },
          "dependencies": [
            "module.loadbalancer.aws_lb_target_group.lb_target_group",
            "module.network.aws_security_group.instance_sg",
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.project_dvwa_subnet_1",
            "module.network.aws_subnet.project_dvwa_subnet_2",
            "module.network.aws_vpc.project_dvwa_net",
            "module.vm.aws_instance.dvwa_instance_1",
            "module.vm.aws_instance.dvwa_instance_2",
            "module.vm.aws_key_pair.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:951326256613:internet-gateway/igw-08b2ee50e8f758ab1",
            "id": "igw-08b2ee50e8f758ab1",
            "owner_id": "951326256613",
            "tags": {
              "Name": "gw"
            },
            "tags_all": {
              "Name": "gw"
            },
            "vpc_id": "vpc-0944ae33209458e3b"
          },
          "dependencies": [
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "aws_nic_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:951326256613:network-interface/eni-0ee767f7e88158e6a",
            "id": "eni-0ee767f7e88158e6a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:7d:e7:dd:96:a6",
            "owner_id": "951326256613",
            "private_ip": "10.0.1.4",
            "private_ip_list": [
              "10.0.1.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-086fb3b8342f8d6e9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0edf0f9d5272ffddd",
            "tags": {
              "Name": "aws_nic_1"
            },
            "tags_all": {
              "Name": "aws_nic_1"
            }
          },
          "dependencies": [
            "module.network.aws_security_group.instance_sg",
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.project_dvwa_subnet_1",
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "aws_nic_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:951326256613:network-interface/eni-0d0092b60d99ab5a2",
            "id": "eni-0d0092b60d99ab5a2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:8c:2f:29:d0:26",
            "owner_id": "951326256613",
            "private_ip": "10.0.2.5",
            "private_ip_list": [
              "10.0.2.5"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-086fb3b8342f8d6e9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a1342b9d7b7bc53",
            "tags": {
              "Name": "aws_nic_2"
            },
            "tags_all": {
              "Name": "aws_nic_2"
            }
          },
          "dependencies": [
            "module.network.aws_security_group.instance_sg",
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.project_dvwa_subnet_2",
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08b2ee50e8f758ab1",
            "id": "r-rtb-02c9d84ddacbef74b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c9d84ddacbef74b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:951326256613:security-group/sg-086fb3b8342f8d6e9",
            "description": "sg for instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086fb3b8342f8d6e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.237.154.94/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http access to loadbalancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0916efb992077a75f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance_sg",
            "name_prefix": "",
            "owner_id": "951326256613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance_sg"
            },
            "tags_all": {
              "Name": "instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0944ae33209458e3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:951326256613:security-group/sg-0916efb992077a75f",
            "description": "sg for load balancer",
            "egress": [],
            "id": "sg-0916efb992077a75f",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.237.154.94/32"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "951326256613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb_sg"
            },
            "tags_all": {
              "Name": "lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0944ae33209458e3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_ingres_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http access to instances",
            "from_port": 80,
            "id": "sgrule-3764244315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0916efb992077a75f",
            "security_group_rule_id": "sgr-04edca63ba180bc8d",
            "self": false,
            "source_security_group_id": "sg-086fb3b8342f8d6e9",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.instance_sg",
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_dvwa_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:951326256613:subnet/subnet-0edf0f9d5272ffddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edf0f9d5272ffddd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "951326256613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_dvwa_net-subnet-1"
            },
            "tags_all": {
              "Name": "project_dvwa_net-subnet-1"
            },
            "vpc_id": "vpc-0944ae33209458e3b"
          },
          "dependencies": [
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_dvwa_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:951326256613:subnet/subnet-02a1342b9d7b7bc53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a1342b9d7b7bc53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "951326256613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_dvwa_net-subnet-2"
            },
            "tags_all": {
              "Name": "project_dvwa_net-subnet-2"
            },
            "vpc_id": "vpc-0944ae33209458e3b"
          },
          "dependencies": [
            "module.network.aws_vpc.project_dvwa_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_dvwa_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:951326256613:vpc/vpc-0944ae33209458e3b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c449e9d67904ec77",
            "default_route_table_id": "rtb-02c9d84ddacbef74b",
            "default_security_group_id": "sg-0ac8d9a8974719bcc",
            "dhcp_options_id": "dopt-0d4f18a4865501880",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0944ae33209458e3b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c9d84ddacbef74b",
            "owner_id": "951326256613",
            "tags": {
              "Name": "project_dvwa_net-vpc"
            },
            "tags_all": {
              "Name": "project_dvwa_net-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dvwa_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:951326256613:instance/i-0740fe210fa8e169f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0740fe210fa8e169f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04fc6c6a259a8655c",
            "private_dns": "ip-10-0-1-177.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.177",
            "public_ip": "13.40.82.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2d731dc2c9f0276",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0edf0f9d5272ffddd",
            "tags": {
              "Name": "dvwa_1"
            },
            "tags_all": {
              "Name": "dvwa_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086fb3b8342f8d6e9"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.instance_sg",
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.project_dvwa_subnet_1",
            "module.network.aws_vpc.project_dvwa_net",
            "module.vm.aws_key_pair.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dvwa_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:951326256613:instance/i-02bf3210af9214d2c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02bf3210af9214d2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ff1c95eacbfcaf2",
            "private_dns": "ip-10-0-2-35.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.35",
            "public_ip": "35.178.182.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2809bba261242f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a1342b9d7b7bc53",
            "tags": {
              "Name": "dvwa_2"
            },
            "tags_all": {
              "Name": "dvwa_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086fb3b8342f8d6e9"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.instance_sg",
            "module.network.aws_security_group.lb_sg",
            "module.network.aws_subnet.project_dvwa_subnet_1",
            "module.network.aws_subnet.project_dvwa_subnet_2",
            "module.network.aws_vpc.project_dvwa_net",
            "module.vm.aws_instance.dvwa_instance_1",
            "module.vm.aws_key_pair.deployer"
          ]
        }
      ]
    }
  ]
}